# demoRMR

./: .gitignore  .gitmodules  demoRMR.pro
demoRMR/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  ObstacleAvoider.cpp  ObstacleAvoider.h  ParticleFilter.cpp  ParticleFilter.h  README.md  demoRMR.pro  doc.md  floodPlanner.cpp  floodPlanner.h  lidarMapper.cpp  lidarMapper.h  lidarMapper.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.txt  mapa.txt  pidcontroller.cpp  pidcontroller.h  robotTrajectoryController.cpp  robotTrajectoryController.h
demoRMR/QJoysticks-master/src/QJoysticks/: SDL_Joysticks.cpp
demoRMR/robot/: robot.cpp  rplidar.cpp  rplidar.h
kobukiSIM/: CKobuki.cpp  CKobuki.h  kobukiSIM.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_loader.cpp  map_loader.h  pozyx.txt  pozyxsim.cpp  pozyxsim.h  priestor.txt  rplidar.cpp  rplidar.h
robot/: CKobuki.cpp  CKobuki.h  CMakeLists.txt  robot.cpp  robot.h  robot.pro
